commit antes de ir embora
