# backend/swagger.json
@@ -24,19 +24,11 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "user_email": {
-                                        "type": "string",
-                                        "description": "email do usuario",
-                                        "example": "email@email"
-                                    },
-                                    "user_password": {
-                                        "type": "string",
-                                        "description": "senha do usuario",
-                                        "example": "password123"
-                                    }
-                                }
+                                "$ref": "#/components/schemas/Login"
+                            },
+                            "example": {
+                                "user_email": "email@email",
+                                "user_password": "123456"
                             }
                         }
                     }
@@ -56,23 +48,14 @@
                     },
                     "500": {
                         "description": "Internal server error"
-                    },
-                    "responseHeader": {
-                        "set-cookie": {
-                            "description": "JWT token set in cookie",
-                            "schema": {
-                                "type": "string",
-                                "example": ""
-                            }
-                        }
                     }
                 }
             }
         },
         "/auth/refresh": {
             "post": {
-                "summary": "User login",
-                "description": "Realiza o login",
+                "summary": "Refresh token do usuario",
+                "description": "Realiza o refresh do token do usuario",
                 "tags": [
                     "Authentication"
                 ],
@@ -81,20 +64,9 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "user_email": {
-                                        "type": "string",
-                                        "description": "email do usuario",
-                                        "example": "email@email"
-                                    },
-                                    "user_password": {
-                                        "type": "string",
-                                        "description": "senha do usuario",
-                                        "example": "password123"
-                                    }
-                                }
-                            }
+                                "$ref": "#/components/schemas/RefreshToken"
+                            },
+                            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxMjM0NTY3ODkwLCJleHAiOjE2MzQyMzQwMDB9.abc123"
                         }
                     }
                 },
@@ -113,22 +85,125 @@
                     },
                     "500": {
                         "description": "Internal server error"
-                    },
-                    "responseHeader": {
-                        "set-cookie": {
-                            "description": "JWT token set in cookie",
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "summary": "Logout do usuario",
+                "description": "Realiza o logout do usuario",
+                "tags": [
+                    "Authentication"
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
                             "schema": {
-                                "type": "string",
-                                "example": ""
+                                "$ref": "#/components/schemas/logout"
                             }
                         }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful logout"
+                    },
+                    "400": {
+                        "description": "Invalid request body"
+                    },
+                    "401": {
+                        "description": "Invalid credentials"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/users":{
+            "get": {
+                "summary": "Get all users",
+                "description": "Retorna todos os usuarios",
+                "tags": [
+                    "Users"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Users"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
         }
     },
     "components": {
-        "schemas": {},
+        "schemas": {
+            "Login": {
+                "type": "object",
+                "properties": {
+                    "user_email": {
+                        "type": "string",
+                        "description": "email do usuario",
+                        "example": "email@email"
+                    },
+                    "user_password": {
+                        "type": "string"
+                    }
+                }
+            },
+            "RefreshToken": {
+                "type": "object",
+                "properties": {
+                    "token": {
+                        "type": "string"
+                    }
+                }
+            },
+            "logout": {
+                "type": "object",
+                "properties": {
+                    "token": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Users": {
+                "type": "object",
+                "properties": {
+                    "user_id": {
+                        "type": "integer"
+                    },
+                    "user_name": {
+                        "type": "string"
+                    },
+                    "user_email": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
